Fix horizontal scroll issue

--- a/src/stylesheets/Landing.css
+++ b/src/stylesheets/Landing.css
@@ -1,6 +1,6 @@
 /* Styles for the entire landing component */
 #landing {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url("../img/hero.png");
   background-position: center;
