--- a/src/stylesheets/Video.css
+++ b/src/stylesheets/Video.css
@@ -42,3 +42,7 @@
   height: 12vh;
   opacity: 1;
 }
+
+.row {
+  width: 100%;
+}
